[package]
name = "fvm_ipld_bigfield"
description = ""
version = "0.0.1"
license = "MIT OR Apache-2.0"
authors = []
edition = "2021"
repository = "https://github.com/filecoin-project/ref-fvm"

[dependencies]
cid = { version = "0.8.5", default-features = false, features = ["serde-codec"] }
unsigned-varint = "0.7.1"
thiserror = "1.0.30"
arbitrary = { version = "1.1.0", optional = true}
fvm_ipld_encoding = { version = "0.3", path = "../encoding" }
fvm_ipld_bitfield = { version = "0.5.4", path = "../bitfield" }
fvm_ipld_amt = { version = "0.5.1", path = "../amt" }
fvm_ipld_hamt = { version = "0.6.1", path = "../hamt", features = ["identity"] }
fvm_ipld_blockstore = { version = "0.1", path = "../blockstore" }
serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"

[dev-dependencies]
rand_xorshift = "0.3.0"
rand = "0.8.5"
criterion = "0.4"
serde_json = "1.0"
gperftools = "0.2.0"

[features]
json = []
enable-arbitrary = ["arbitrary"]
