[package]
name = "fil_create_actor"
version = "0.1.0"
edition = "2021"
publish = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
fvm_sdk = { version = "3.3.0", path = "../../../../sdk" }
fvm_shared = { version = "3.4.0", path = "../../../../shared" }
actors_v12_runtime = { package = "fil_actors_runtime", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68" }

[lib]
crate-type = ["cdylib"] ## cdylib is necessary for Wasm build
